# tetros

./: .gitignore  CMakeLists.txt  Sconstruct
resources/images/: background.aseprite  block.ase  button_left.aseprite  button_right.aseprite  grid_bg.aseprite
src/: events.c  font.c  font.h  game.c  game.h  grid.c  list.c  list.h  log.h  main.c  pieces.h  scene.c  scene.h  sprite.c  sprite.h  state.c  state.h  status.h  tetris.h  tetromino.c  types.h  utils.c  utils.h
src/assets/: assets.c  assets.h
src/assets/fonts/: Roboto-Light.h  nokiafc22.h
src/assets/images/: background.h  block.h  button_left.h  button_right.h  grid_bg.h
src/gui/: button.c  button.h  dpad.c  dpad.h  gui.h
src/scenes/: grid.c  grid.h  scene_menu.c  scene_menu.h  scene_play.c  scene_play.h  tetro.c  tetro.h  tetromino.h
src/scenes/scene_end/: scene_end.c  scene_end.h
src/scenes/scene_menu/: scene_menu.c  scene_menu.h
src/scenes/scene_play/: debug_grid.txt  grid.c  grid.h  scene_play.c  scene_play.h  tetro.c  tetro.h
tools/: embed_code.sh  hexembed.c  wasm_page.html  zipbin.sh
